--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -175,3 +175,19 @@ input, textarea, select, .uneditable-input {
 #user_name, #user_email, #user_password, #user_password_confirmation, #session_email, #session_password {
   height: 30px;
 }
+
+
+/* users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid $grayLighter;
+    &:last-child {
+      border-bottom: 1px solid $grayLighter;
+    }
+  }
+}
